--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@rollup/plugin-node-resolve": "^6.0.0",
     "cypress": "^3.8.2",
     "rollup": "^1.20.0",
+    "rollup-plugin-bundle-html": "^0.2.2",
     "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-postcss": "^2.1.1",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "svelte-preprocess": "^3.4.0"
   },
   "dependencies": {
     "axios": "^0.19.1",
