A more useful readme

--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "test": "./geo_picker daemon -m production & cypress run"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-node-resolve": "^6.0.0",
+    "@testing-library/svelte": "^3.0.0",
+    "babel-jest": "^25.1.0",
     "cypress": "^3.8.2",
+    "jest": "^25.1.0",
     "rollup": "^1.20.0",
     "rollup-plugin-bundle-html": "^0.2.2",
     "rollup-plugin-livereload": "^1.0.0",
@@ -20,6 +25,7 @@
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
     "svelte": "^3.0.0",
+    "svelte-jester": "^1.0.5",
     "svelte-preprocess": "^3.4.0"
   },
   "dependencies": {
